--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ Imports:
     checkmate,
     matrixStats (>= 0.52),
     parallel,
+    posterior,
     stats,
     loo (>= 2.3.1)
 Suggests: 
     testthat,
     rstan,
+    cmdstanr,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
