--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -1,4 +1,4 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
@@ -18,32 +18,66 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: macOS-latest, r: 'release', rtools: ''}
+          - {os: windows-latest, r: 'devel', rtools: '42'}
+          - {os: windows-latest, r: 'release', rtools: '42'}
+          - {os: windows-latest, r: 'oldrel', rtools: '40'}
+          - {os: ubuntu-latest, r: 'release', rtools: ''}
+          - {os: ubuntu-latest, r: 'oldrel', rtools: ''}
 
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHPAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      NOT_CRAN: true
 
     steps:
       - uses: actions/checkout@v2
+      - uses: n1hility/cancel-previous-runs@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: r-lib/actions/setup-pandoc@v2
-
       - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
-          use-public-rspm: true
+      with:
+        r-version: ${{ matrix.config.r }}
+        use-public-rspm: true
+        rtools-version: '42'
 
+      # packages that are needed for R CMD CHECK
       - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::rcmdcheck
-          needs: check
+with:
+      cache-version: 3
+        extra-packages: |
+          rcmdcheck
+          checkmate
+          jsonlite
+          posterior
+          processx
+          R6
+          BH
+          RcppEigen
+          StanHeaders
+          RcppParallel
+          withr
+          testthat
+          rmarkdown
+          knitr
+          any::XML
+          any::textshaping
+
+      - name: Install CmdStanR
+        run: |
+          remotes::install_github("stan-dev/cmdstanr")
+	  cmdstanr::install_cmdstan()
+	shell: Rscript {0}
+      - name: Install Development RStan on Windows
+        if: runner.os == 'Windows'
+        run: |
+          Sys.setenv(MAKEFLAGS=paste0("-j",parallel::detectCores()))
+          install.packages(c("StanHeaders", "rstan"), repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
+        shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          upload-snapshots: true
+          build_args: 'c("--no-manual", "--no-build-vignettes")'
+          args: 'c("--no-manual", "--as-cran", "--ignore-vignettes")'
