--- a/.github/workflows/R-CMD-check-build.yaml
+++ b/.github/workflows/R-CMD-check-build.yaml
@@ -1,6 +1,6 @@
 # Install the requirements for R-CMD-check and create the caches
 on:
-  workflow_dispatch
+  workflow_dispatch:
 
 name: R-CMD-check create cache
 
