Reorder to avoid misreading the name

--- a/.github/workflows/test-coverage-build.yaml
+++ b/.github/workflows/test-coverage-build.yaml
@@ -1,6 +1,6 @@
 # Install the requirements for test-coverage and create the caches
 on:
-  workflow_dispatch:
+  workflow_dispatch
 
 name: test-coverage create cache
 
