Check without cmdstanr.
This shuld be sufficient for CRAN.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -49,7 +49,6 @@ jobs:
         with:
           cache-version: 1
           extra-packages: |
-            stan-dev/cmdstanr
             rcmdcheck
             checkmate
             jsonlite
@@ -66,6 +65,18 @@ jobs:
             knitr
             any::XML
             any::textshaping
+
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          build_args: 'c("--no-manual", "--no-build-vignettes")'
+          args: 'c("--no-manual", "--as-cran", "--ignore-vignettes")'
+
+      # Include cmdstanr and rerun checks
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 1
+          extra-packages: |
+            stan-dev/cmdstanr
 
       - uses: ./.github/actions/cmdstanr_cached
 
