Disable cmdstanR isntall checks
Trying a solution from discourse.mc-stan.org

--- a/.github/actions/cmdstanr_cached/action.yaml
+++ b/.github/actions/cmdstanr_cached/action.yaml
@@ -19,7 +19,7 @@ runs:
     - name: Install CmdStanR
       if: steps.cache-cmdstanr.outputs.cache-hit != 'true'
       run: |
-        cmdstanr::check_cmdstan_toolchain(fix = TRUE)
+        cmdstanr::check_cmdstan_toolchain(fix = TRUE, check_toolchain = FALSE)
         cmdstanr::install_cmdstan(cores = parallel::detectCores())
       shell: Rscript {0}
     - name: Install Development RStan on Windows
