run styler::style_pkg()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Suggests:
     rmarkdown,
     parallel,
     bayesplot
-Enhancements:
+Enhances:
     cmdstanr
 VignetteBuilder: knitr
 Config/testthat/parallel: true
