add example to readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(moment_match,CmdStanFit)
 S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
 export(constrain_draws)
+export(example_iwmm_model)
 export(moment_match)
 export(shift)
 export(shift_and_cov)
