--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: iwmm
 Title: Importance weighted moment matching
 Version: 0.0.1
 Authors@R: 
-    c(person("Topi", "Paananen", email = "topi.paananen@aalto.fi", role = c("cre", "aut")),
+    c(person("Topi", "Paananen", email = "work@topipaananen.fi", role = c("cre", "aut")),
       person("Noa", "Kallioinen", role = "ctb"))
 Description: Importance weighted moment matching.
 License: GPL (>=3)
