add more methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
 export(constrain_draws)
 export(example_iwmm_model)
+export(log_prob_draws)
 export(moment_match)
 export(shift)
 export(shift_and_cov)
 export(shift_and_scale)
+export(unconstrain_draws)
 importFrom(stats,weights)
