--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(constrain_draws,stanfit)
 S3method(moment_match,CmdStanFit)
+S3method(moment_match,brmsfit)
 S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
 export(constrain_draws)
