update class of moment match output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(constrain_draws,stanfit)
 S3method(moment_match,CmdStanFit)
 S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
+S3method(print,adapted_importance_sampling)
 export(constrain_draws)
 export(example_iwmm_model)
 export(moment_match)
