--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 S3method(constrain_draws,stanfit)
 S3method(moment_match,CmdStanFit)
+S3method(moment_match,draws_array)
+S3method(moment_match,draws_df)
+S3method(moment_match,draws_list)
 S3method(moment_match,draws_matrix)
+S3method(moment_match,draws_rvars)
 S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
 S3method(print,adapted_importance_sampling)
