Support classes from posterior (#5)
* update description

* update class of moment match output

* add draws_matrix method

* support other posterior formats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,14 @@
 
 S3method(constrain_draws,stanfit)
 S3method(moment_match,CmdStanFit)
+S3method(moment_match,draws_array)
+S3method(moment_match,draws_df)
+S3method(moment_match,draws_list)
+S3method(moment_match,draws_matrix)
+S3method(moment_match,draws_rvars)
 S3method(moment_match,matrix)
 S3method(moment_match,stanfit)
+S3method(print,adapted_importance_sampling)
 export(constrain_draws)
 export(example_iwmm_model)
 export(moment_match)
