--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ S3method(moment_match,stanfit)
 S3method(print,adapted_importance_sampling)
 export(constrain_draws)
 export(example_iwmm_model)
+export(log_prob_draws)
 export(moment_match)
 export(shift)
 export(shift_and_cov)
 export(shift_and_scale)
+export(unconstrain_draws)
 importFrom(stats,weights)
