--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,9 @@ RoxygenNote: 7.2.3
 Depends:
     R (>= 3.1.2)
 Imports:
-    abind,
     checkmate,
     matrixStats (>= 0.52),
-    posterior,
+    posterior (>= 1.5.0),
     stats
 Suggests: 
     bayesplot,
