use posterior github version in workflow

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -50,6 +50,7 @@ jobs:
           cache-version: 1
           extra-packages: |
             stan-dev/cmdstanr
+            stan-dev/posterior
             rcmdcheck
             checkmate
             jsonlite
