--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Config/testthat/edition: 3
+Config/testthat/parallel: true
 Depends:
     R (>= 3.1.2)
 Imports:
